Fix issues with position of review button and double scrolling in SBS mode

--- a/css/gitphp.css
+++ b/css/gitphp.css
@@ -21,15 +21,6 @@ td.code * {
 }
 
 /*
- * Title bar
- * (main header with commit message)
- */
-div.title a.title {
-	/* display: block; */
-}
-
-
-/*
  * Full log view
  */
 div.log_body {
